--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -5,12 +5,12 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--choice">
-                        <use href="./img/svgsprite/sprite.symbol.svg#choice"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#shield"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 data-key="card1-title" class="title-4"> Облачная защита </h3>
+                        <h3 data-key="card1-title" class="title-4">Облачная защита</h3>
                     </div>
                     <p data-key="card1-text" class="benefits__item-desc">не нагружает систему, всегда актуальна</p>
                 </div>
@@ -18,7 +18,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--new">
-                        <use href="./img/svgsprite/sprite.symbol.svg#new"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#emergency"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -31,7 +31,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--service">
-                        <use href="./img/svgsprite/sprite.symbol.svg#service"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#control"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -44,7 +44,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--delivery">
-                        <use href="./img/svgsprite/sprite.symbol.svg#delivery"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#complex-protection"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -57,7 +57,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--presentation">
-                        <use href="./img/svgsprite/sprite.symbol.svg#presentation"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#license"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
