--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -1,21 +1,31 @@
 <section class="about" id="about">
     <div class="container">
         <div class="about__flex">
+            <div class="about__title-wrapper">
+                <h1 class="about__title">Надежная антивирусная защита для вашего бизнеса</h1>
+            </div>
             <div class="about__desc">
-               <h1 data-key="description" class="about__text">Надежная антивирусная защита для вашего бизнеса</h1>
-               <p>Trend Micro Worry-Free – облачная безопасность без нагрузки на систему. Комплексная защита от вирусов, атак и программ-вымогателей.</p>
-               <p>✅ Полная защита корпоративных устройств ✅ Централизованное управление и мониторинг ✅ Высокая степень выявления угроз (AI и машинное обучение)</p>
-               <p>📌 Получите консультацию по установке и защите уже сегодня</p>
+                <h2 class="about__product-title">Trend Micro Worry-Free</h2 >
+                    <p>облачная безопасность без нагрузки на систему. Комплексная защита от вирусов, атак и программ-вымогателей.                     
+                    </p>
+                <ul class="about__list">
+                        <li>✅ Полная защита корпоративных устройств </li>
+                        <li>✅ Централизованное управление и мониторинг</li>
+                        <li>✅ Высокая степень выявления угроз (AI и машинное обучение)</li>
+                </ul>                         
+            </div>
+        </div>           
+        
+        <div class="about__consult">
+                <p>📌 Получите консультацию по установке и защите уже сегодня</p>
                 <div class="about__btns">
-                    <div class="about__btns_company-btn">
-                        <a href="#" class="open-info-btn btn btn-company">
-                            <span data-key="info-btn-prefix">Получить консультацию</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            </div>
-    
+                     <div class="about__btns_company-btn">
+                         <a href="#" class="open-info-btn btn btn-company">
+                             <span data-key="info-btn-prefix">Получить консультацию</span>
+                         </a>
+                     </div>
+                 </div>
+            </div>          
         </div>
     <!-- @@include('modal-info.html') -->
     <!-- @@include('modal-shop.html') -->
