--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -6,8 +6,7 @@
             </div>
             <div class="about__desc">
                 <h2 class="about__product-title">Trend Micro Worry-Free</h2 >
-                    <p>Облачная безопасность без нагрузки на систему. Комплексная защита от вирусов, атак и программ-вымогателей.                     
-                    </p>
+                    <p>Комплексная защита от вирусов, атак и программ-вымогателей. Облачная безопасность без нагрузки на систему.</p>
                 </div>                
             </div> 
             <div class="about__consult">
