--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -32,12 +32,12 @@
             </nav>
 
             <div class="switcher-wrapper">
-                <input type="radio" name="language" value="ee" id="lang-ee" />
-                <label class="switcher" for="lang-ee">Ee</label>
+                <input type="radio" name="language" value="lv" id="lang-lv" />
+                <label class="switcher" for="lang-lv">LV</label>
                 <input type="radio" name="language" value="en" id="lang-eng" />
-                <label class="switcher" for="lang-eng">En</label>
+                <label class="switcher" for="lang-eng">EN</label>
                 <input type="radio" name="language" value="ru" id="lang-ru" checked />
-                <label class="switcher" for="lang-ru">Ru</label>
+                <label class="switcher" for="lang-ru">RU</label>
                 <span class="lang-placeholder"></span>
             </div>
             <button class="mobile-nav-btn">
