--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,9 +24,18 @@
 
 	<main class="main">
 		@@include('blocks/about.html')
-		@@include('blocks/benefits.html')		
+		@@include('blocks/benefits.html')
+		@@include('blocks/why.html')
+		@@include('blocks/partners.html')
+		@@include('blocks/feedback.html')
+		@@include('blocks/howtobuy.html')
+
+		@@include('blocks/cta.html')
+		
+		<!-- @@include('blocks/proposals.html') -->		
 		<!-- @@include('blocks/brands.html') -->
 		<!-- @@include('blocks/visual.html') -->
+
 	</main>
 	@@include('blocks/footer.html')
 	<script src="./js/index.bundle.js"></script>
