--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -3,13 +3,12 @@
         <div class="footer__row">
             <div class="footer__left-side">
                 <div class="footer__data">                    
-                    <p> ILUXSIIR OÜ <br>
-                        Mahtra tn 1, Tallinn, Harjumaa 13811, Estonia <br>
-                        VAT Nr. EE 102681136, Reg. nr. 16867161 <br>
-                        AS SWEDBANK <br>
-                        Account:EE072200221084802757 <br>
-                        SWIFT: HABAEE2X <br>
-                        <a href="https://shopforhair.ee/" target="_blank" >www.iluxsiir.ee</a>
+                    <p> "N SERVICE", SIA<br>
+                        Рег. номер: 40203287886 <br>
+                        Рига, ул. Русес 26-135, LV-1029, Латвия <br>
+                        <a href="mailTo:service@nservice.lv"> service@nservice.lv </a> 
+                        <br>                                            
+                        <a href="https://nservice.lv/" target="_blank" > www.nservice.lv</a>
                     </p>
                 </div>
             </div>
