--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -22,11 +22,11 @@
             </div> -->
             <nav class="header__nav nav">
                 <ul class="nav__list">
-                    <li><a href="#about" data-key="about-us" class="active hover-underline-animation center">Главная</a>
+                    <li><a href="#about" data-key="about-us" class="active hover-underline-animation center">О нас</a>
                     </li>
                     <li><a href="#brands" data-key="brands" class="hover-underline-animation center">trendmicro</a></li>
-                    <li><a href="#proposals" data-key="for-clients" class="hover-underline-animation center">Рекламные материалы</a></li>
-                    <li><a href="#contacts" data-key="contacts" class="hover-underline-animation center">Контакты</a>
+                    <li><a href="#proposals" data-key="for-clients" class="hover-underline-animation center">IT обслуживание</a></li>
+                    <li><a href="#contacts" data-key="contacts" class="hover-underline-animation center">Настройка оборудования</a>
                     </li>
                 </ul>
             </nav>
