--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -2,22 +2,19 @@
     <div class="container">
         <div class="about__flex">
             <div class="about__title-wrapper">
-                <h1 class="about__title">Надежная антивирусная защита <small>для вашего бизнеса</small></h1>
+                <h1 class="about__title">Надежная антивирусная защита <small class="about__title-small">для вашего бизнеса</small></h1>
             </div>
             <div class="about__desc">
-                <h2 class="about__product-title">Trend Micro Worry-Free</h2 >
-                    <p>Комплексная защита от вирусов, атак и программ-вымогателей. Облачная безопасность без нагрузки на систему.</p>
+                <h2 class="about__product-title">"Trend Micro Worry-Free"</h2 >
+                    <p class="about__product-subtitle">Комплексная защита от вирусов, атак и программ-вымогателей. Облачная безопасность без нагрузки на систему.</p>
                 </div>                
             </div> 
             <div class="about__consult">
-                <p class="about__consult-text">Получите консультацию по установке и защите уже сегодня</p>
-                <div class="about__btns">
-                     <div class="about__btns_company-btn">
-                         <a href="#" class="open-info-btn btn btn-company">
-                             <span data-key="info-btn-prefix">Получить консультацию</span>
-                         </a>
-                     </div>
-                 </div>
+                <p class="about__consult-text">Получите консультацию по установке и защите уже сегодня!</p>
+                <div class="about__btns"><a href="#" class="btn">
+                        Получить консультацию
+                    </a>
+                </div>
             </div>                
             <ul class="about__list">
                     <li>✅ Полная защита корпоративных устройств </li>
