--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,7 @@
 	<main class="main">
 		@@include('blocks/about.html')
 		@@include('blocks/benefits.html')
+		@@include('blocks/video.html')
 		@@include('blocks/why.html')
 		@@include('blocks/partners.html')
 		@@include('blocks/feedback.html')
