--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -4,8 +4,8 @@
         <ul class="benefits__wrapper">
             <li class="benefits__item">
                 <div class="benefits__item-img">
-                    <svg class="icon icon--choice">
-                        <use href="./img/svgsprite/sprite.symbol.svg#shield"></use>
+                    <svg class="icon icon--shield">
+                        <use href="./img/svgsprite/sprite.symbol.svg#shield2"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -17,8 +17,8 @@
             </li>
             <li class="benefits__item">
                 <div class="benefits__item-img">
-                    <svg class="icon icon--new">
-                        <use href="./img/svgsprite/sprite.symbol.svg#emergency"></use>
+                    <svg class="icon icon--emergency">
+                        <use href="./img/svgsprite/sprite.symbol.svg#emergency2"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -30,8 +30,8 @@
             </li>
             <li class="benefits__item">
                 <div class="benefits__item-img">
-                    <svg class="icon icon--service">
-                        <use href="./img/svgsprite/sprite.symbol.svg#control"></use>
+                    <svg class="icon icon--control">
+                        <use href="./img/svgsprite/sprite.symbol.svg#control2"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -43,8 +43,8 @@
             </li>
             <li class="benefits__item">
                 <div class="benefits__item-img">
-                    <svg class="icon icon--delivery">
-                        <use href="./img/svgsprite/sprite.symbol.svg#complex-protection"></use>
+                    <svg class="icon icon--complex-protection">
+                        <use href="./img/svgsprite/sprite.symbol.svg#protection-umbrella"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -56,8 +56,8 @@
             </li>
             <li class="benefits__item">
                 <div class="benefits__item-img">
-                    <svg class="icon icon--presentation">
-                        <use href="./img/svgsprite/sprite.symbol.svg#license"></use>
+                    <svg class="icon icon--license">
+                        <use href="./img/svgsprite/sprite.symbol.svg#licenses"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
