--- a/src/html/blocks/cta.html
+++ b/src/html/blocks/cta.html
@@ -1,29 +1,37 @@
-<section class="cta">
+<section class="cta" id="cta">
     <div class="container">
         <h2 class="title-2">Оставьте заявку и получите консультацию по безопасности уже сегодня</h2>
-        <div class="cta__socials">
-            <a href="#" class="cta__socials-item">
-                <svg class="icon icon--whatsapp">
-                    <use href="./img/svgsprite/sprite.symbol.svg#whatsapp"><span>Whatsapp</span></use>
-                </svg>
-            </a>
-            <a href="#" class="cta__socials-item">
-                <svg class="icon icon--telegram">
-                    <use href="./img/svgsprite/sprite.symbol.svg#telegram"><span>Telegram</span></use>
-                </svg>
-            </a>
+        <div class="cta__wrapper">
+
+            <div class="cta__socials">
+                <a href="#" class="cta__socials-item">
+                    <svg class="icon icon--whatsapp">
+                        <use href="./img/svgsprite/sprite.symbol.svg#whatsapp"><span>Whatsapp</span></use>
+                    </svg>
+                </a>
+                <a href="#" class="cta__socials-item">
+                    <svg class="icon icon--telegram">
+                        <use href="./img/svgsprite/sprite.symbol.svg#telegram"><span>Telegram</span></use>
+                    </svg>
+                </a>
+                <a href="#" class="cta__socials-item">
+                    <svg class="icon-social icon--telegram">
+                        <use href="./img/svgsprite/sprite.symbol.svg#telegram">Telegram</use>
+                    </svg>
+                </a>
+            </div>
+            
+            <form class="cta__form" action="" autocomplete="on">
+                <input type="text" placeholder="Ваше имя">
+                <input type="text" placeholder="Ваш email">
+                <input type="text" placeholder="Ваш телефон">
+                <textarea name="message" placeholder="Ваше сообщение" wrap="hard"></textarea>
+                <div class="g-recaptcha" data-sitekey="6LcZ9qQbAAAAAID9Z9J9J9Z9J9Z9J9Z9J9Z9J9Z9"></div>
+                <div class="cta__btn">
+                    <a href="#!" class="btn">Оставить заявку
+                    </a>
+                </div>
+            </form>        
         </div>
-        
-        <form class="cta__form" action="" autocomplete="on">
-            <input type="text" placeholder="Ваше имя">
-            <input type="text" placeholder="Ваш email">
-            <input type="text" placeholder="Ваш телефон">
-            <input type="text" placeholder="Ваш вопрос">
-            <div class="g-recaptcha" data-sitekey="6LcZ9qQbAAAAAID9Z9J9J9Z9J9Z9J9Z9J9Z9J9Z9"></div>
-           <div class="cta__btn">
-                <a href="#" class="btn">Получить консультацию
-            </a>
-        </div>
-        </form>        
     </div>
 </section>
