--- a/src/html/blocks/feedback.html
+++ b/src/html/blocks/feedback.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h2 class="title-2">Отзывы</h2>
         <p class="subtitle">Все, кто с нами работает, благодарят за это Вселенную</p>
-        <div class="slaider">
+        <div class="feedbacks__slaider">
             <div class="feedbacks__swiper">
                 @@include('templates/feedbacks-swiper.html')
             </div>                        
