--- a/src/html/blocks/howtobuy.html
+++ b/src/html/blocks/howtobuy.html
@@ -1,4 +1,4 @@
-<section class="howtobuy">
+<section class="howtobuy" id="howtobuy">
     <div class="container">
         <h2 class="title-2">Как купить?</h2>
         <ul class="howtobuy__list">
