--- a/src/html/blocks/video.html
+++ b/src/html/blocks/video.html
@@ -1,4 +1,4 @@
-<section class="video">
+<section class="video" id="trendmicro">
     <h2 class="visually-hidden">title</h2>
     <div class="container">
         <div class="video__wrapper">
