--- a/src/html/blocks/why.html
+++ b/src/html/blocks/why.html
@@ -2,24 +2,19 @@
     <div class="container">
         <div class="why__header">
             <h2 class="title-2">Почему N SERVICE?</h2>
-            <p class="subtitle">Сотрудничаем с Trend Micro миллион лет</p>
         </div>
         <div class="why__wrapper">            
-            <ul class="why__list">
-                <li class="list-item">Настройка антивируса под ваш бизнес</li>
-                <li class="list-item">Комплексная защита под ключ</li>
-                <li class="list-item">Аудит безопасности</li>
-                <li class="list-item">Постоянная техническая поддержка</li>
-            </ul>
-            <div class="why__bonus">
-                <h3 class="bonus-title title-4">Бонусы:</h3>
-                <ul class="bonus__list">
-                    <li>Бесплатная установка антивируса.</li>
-                    <li>Скидки на обновления и услуги для постоянных клиентов.
-                    </li>
-                    <li>Консультация экспертов по выбору оптимального решения.
-                    </li>
-                </ul>
+            <p class="subtitle why__subtitle">N Service сотрудничает с Trend Micro миллион лет и предоставяет услуги этой компании в полном объеме, с гарантией персонального подхода к каждому клиенту </p>
+            <div class="why__list-wrapper">
+                <div class="why__list-title">
+                    <p class="subtitle">Наши особенности</p>
+                </div>
+                    <ul class="why__list">
+                        <li class="list-item">Настройка антивируса под ваш бизнес, с учетом его особенностей</li>
+                        <li class="list-item">Комплексная защита "под ключ" - полный спектр безопасности ваших данных. </li>
+                        <li class="list-item">Аудит безопасности - выявляем "слабые места" вашей системы. </li>
+                        <li class="list-item">Постоянная техническая поддержка.</li>
+                    </ul>          
             </div>
         </div>
     </div>
