--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,10 +29,10 @@
 		@@include('blocks/benefits.html')
 		@@include('blocks/video.html')
 		@@include('blocks/why.html')
+		@@include('blocks/bonus.html')
 		@@include('blocks/partners.html')
 		@@include('blocks/feedback.html')
 		@@include('blocks/howtobuy.html')
-
 		@@include('blocks/cta.html')
 		
 		<!-- @@include('blocks/proposals.html') -->		
