--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -24,9 +24,9 @@
                 <ul class="nav__list">
                     <li><a href="#about" data-key="about-us" class="active hover-underline-animation center">О нас</a>
                     </li>
-                    <li><a href="#brands" data-key="brands" class="hover-underline-animation center">trendmicro</a></li>
-                    <li><a href="#proposals" data-key="for-clients" class="hover-underline-animation center">IT обслуживание</a></li>
-                    <li><a href="#contacts" data-key="contacts" class="hover-underline-animation center">Настройка оборудования</a>
+                    <li><a href="#trendmicro" data-key="brands" class="hover-underline-animation center">trendmicro</a></li>
+                    <li><a href="#howtobuy" data-key="for-clients" class="hover-underline-animation center">тарифы</a></li>
+                    <li><a href="#cta" data-key="contacts" class="hover-underline-animation center">Контакты</a>
                     </li>
                 </ul>
             </nav>
