--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -5,7 +5,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--shield">
-                        <use href="./img/svgsprite/sprite.symbol.svg#shield2"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#cloud"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -18,7 +18,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--emergency">
-                        <use href="./img/svgsprite/sprite.symbol.svg#emergency2"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#siren"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -31,7 +31,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--control">
-                        <use href="./img/svgsprite/sprite.symbol.svg#control2"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#tuning"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -44,7 +44,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--complex-protection">
-                        <use href="./img/svgsprite/sprite.symbol.svg#protection-umbrella"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#umbrella"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
@@ -57,7 +57,7 @@
             <li class="benefits__item">
                 <div class="benefits__item-img">
                     <svg class="icon icon--license">
-                        <use href="./img/svgsprite/sprite.symbol.svg#licenses"></use>
+                        <use href="./img/svgsprite/sprite.symbol.svg#license"></use>
                     </svg>
                 </div>
                 <div class="benefits__icon-text">
