--- a/src/html/blocks/feedback.html
+++ b/src/html/blocks/feedback.html
@@ -3,7 +3,11 @@
         <h2 class="title-2">Отзывы</h2>
         <p class="subtitle">Все, кто с нами работает, благодарят за это Вселенную</p>
             <div class="feedbacks__swiper">
-                @@include('templates/feedbacks-swiper.html')              
+                @@include('templates/feedbacks-swiper.html')
+                <div class="swiper__btns">
+                    <div class="swiper-btn-next"></div>              
+                    <div class="swiper-btn-prev"></div>
+                </div>
             </div>
     </div>
 </section>
