--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -10,9 +10,9 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 data-key="card1-title" class="title-4">Облачная защита</h3>
+                        <h3 data-key="card1-title" class="title-4">Облачное размещение</h3>
                     </div>
-                    <p data-key="card1-text" class="benefits__item-desc">не нагружает систему, всегда актуальна</p>
+                    <p data-key="card1-text" class="benefits__item-desc">Зашита не нагружает систему и всегда соответствует актуальной версии</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -25,7 +25,7 @@
                     <div class="benefits__item-title">
                         <h3 data-key="card2-title" class="title-4">Высокая степень выявления угроз </h3>
                     </div>
-                    <p data-key="card2-text" class="benefits__item-desc">искусственный интеллект и машинное обучение.</p>
+                    <p data-key="card2-text" class="benefits__item-desc">Применяется искусственный интеллект и машинное обучение</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -38,7 +38,7 @@
                     <div class="benefits__item-title">
                         <h3 data-key="card3-title" class="title-4">Удаленное администрирование </h3>
                     </div>
-                    <p data-key="card3-text" class="benefits__item-desc">удобный контроль всех устройств</p>
+                    <p data-key="card3-text" class="benefits__item-desc">Удобный контроль всех устройств</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -51,7 +51,7 @@
                     <div class="benefits__item-title">
                         <h3 data-key="card4-title" class="title-4">Комплексная защита </h3>
                     </div>
-                    <p data-key="card4-text" class="benefits__item-desc">– от вирусов, фишинга, атак</p>
+                    <p data-key="card4-text" class="benefits__item-desc">Одновременная защита от вирусов, фишинга, атак и других неприятностей</p>
                 </div>
             </li>
             <li class="benefits__item">
@@ -64,7 +64,7 @@
                     <div class="benefits__item-title">
                         <h3 data-key="card5-title" class="title-4">Гибкие лицензии </h3>
                     </div>
-                    <p data-key="card5-text" class="benefits__item-desc">пакеты от 1 до 100 конечных точек.</p>
+                    <p data-key="card5-text" class="benefits__item-desc">Лицензионные пакеты от 1 до 100 конечных точек.</p>
                 </div>
             </li>            
         </ul>
