--- a/src/html/blocks/bonus.html
+++ b/src/html/blocks/bonus.html
@@ -1,12 +1,25 @@
 <section class="bonus">
     <div class="container">
         <div class="bonus__wrapper">
-            <h3 class="bonus__title title-2">Бонусы от N servise:</h3>
+            <h3 class="bonus__title title-2">Бонусы от N service:</h3>
             <ul class="bonus__list">
-                <li class="bonus__list-item">Бесплатная установка антивируса.</li>
-                <li class="bonus__list-item">Скидки на обновления и услуги для постоянных клиентов.
+                <li class="bonus__list-item">
+                    <svg class="icon--gift1">
+                        <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift1"></use>
+                    </svg>
+                    Бесплатная установка антивируса
                 </li>
-                <li class="bonus__list-item">Консультация экспертов по выбору оптимального решения.
+                <li class="bonus__list-item">
+                    <svg class="icon--gift2">
+                        <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift2"></use>
+                    </svg>
+                    Скидки на обновления и услуги для постоянных клиентов
+                </li>
+                <li class="bonus__list-item">
+                    <svg class="icon--gift3">
+                        <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift3"></use>
+                    </svg>
+                    Консультация экспертов по выбору оптимального решения
                 </li>
             </ul>
         </div>       
