--- a/src/html/blocks/partners.html
+++ b/src/html/blocks/partners.html
@@ -2,42 +2,44 @@
     <div class="container">
         <h2 class="title-2">Наши партнеры</h2>
         <div class="gallery">
-            <div class="partner">
+            <a href="https://www.via-una.lv" class="partner">
                 <img src="viauna_logo.jpg" alt="VIA UNA, SIA">
-                <a href="#">VIA UNA, SIA</a>
-            </div>
-            <div class="partner">
+                <p>VIA UNA, SIA</p>
+            </a>
+            <a href="https://aktualaspreces.lv" class="partner">
                 <img src="siaes_logo.jpg" alt="SIA ES TE RĪGA">
-                <a href="#">SIA ES TE RĪGA</a>
-            </div>
-            <div class="partner">
+                <p>SIA ES TE RĪGA</p>
+            </a>
+            <a href="https://miksplus.eu" class="partner">
                 <img src="miksplus_logo.jpg" alt="Miks Plus, SIA">
-                <a href="#">Miks Plus, SIA</a>
-            </div>
-            <div class="partner">
-                <img src="markslapunovs_logo.jpg" alt="Marks Lapunovs">
-                <a href="#">Marks Lapunovs</a>
-            </div>
-            <div class="partner">
-                <img src="lolitavovka_logo.jpg" alt="LOLITA VOVKA">
-                <a href="#">LOLITA VOVKA</a>
-            </div>
-            <div class="partner">
-                <img src="livonia_logo.jpg" alt="LIVONIA SHIPPING COMPANY, SIA">
-                <a href="#">LIVONIA SHIPPING COMPANY, SIA</a>
-            </div>
-            <div class="partner">
+                <p>Miks Plus, SIA</p>
+            </a>
+            <a href="https://iluxsiir.ee" class="partner">
                 <img src="iluxsiir_logo.jpg" alt="IluXsiir OÜ">
-                <a href="#">IluXsiir OÜ</a>
-            </div>
-            <div class="partner">
+                <p>IluXsiir OÜ</p>
+            </a>
+            <a href="https://i-work.lv" class="partner">
                 <img src="iwork_logo.jpg" alt="I-Work Group, SIA">
-                <a href="#">I-Work Group, SIA</a>
-            </div>
-            <div class="partner">
+                <p>I-Work Group, SIA</p>
+            </a>
+            <a href="#!" class="partner">
+                <img src="livonia_logo.jpg" alt="LIVONIA SHIPPING COMPANY, SIA">
+                <p>LIVONIA SHIPPING COMPANY, SIA</p>
+            </a>
+            <a href="#!" class="partner">
+                <img src="markslapunovs_logo.jpg" alt="Marks Lapunovs">
+                <p>Marks Lapunovs</p>
+            </a>           
+            <a href="#!" class="partner">
+                <img src="lolitavovka_logo.jpg" alt="LOLITA VOVKA">
+                <p>LOLITA VOVKA</p>
+            </a>
+            <a href="#!" class="partner">
                 <img src="aleksandrs_logo.jpg" alt="Aleksandrs Vovks">
-                <a href="#">Aleksandrs Vovks</a>
-            </div>
+                <p>Aleksandrs Vovks</p>
+            </a>
+            
+           
         </div>
     </div>
 </section>
