--- a/src/html/blocks/feedback.html
+++ b/src/html/blocks/feedback.html
@@ -5,8 +5,16 @@
             <div class="feedbacks__swiper">
                 @@include('templates/feedbacks-swiper.html')
                 <div class="swiper__btns">
-                    <div class="swiper-btn-next"></div>              
-                    <div class="swiper-btn-prev"></div>
+                    <div class="swiper-btn-next">
+                        <svg class="icon icon--arrow-left">
+                            <use href="./img/svgsprite/sprite.symbol.svg#arrow-left"></use>
+                        </svg>
+                    </div>    
+                   <div class="swiper-btn-prev">
+                        <svg class="icon icon--arrow-right">
+                            <use href="./img/svgsprite/sprite.symbol.svg#arrow-right"></use>
+                        </svg>
+                    </div>
                 </div>
             </div>
     </div>
