--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -7,11 +7,14 @@
             <div class="about__desc">
                 <h2 class="about__product-title">"Trend Micro Worry-Free"</h2 >
                     <div class="about__product-subtitle">
-
-                        <p class="animated-text"><span>Комплексная</span> <span>защита</span> <span>от</span> <span>вирусов,</span>
-                            <span>атак</span> <span>и</span> <span>программ-вымогателей.</span>
-                            <span>Облачная</span> <span>безопасность</span> <span>без</span> <span>нагрузки</span> <span>на</span> <span>систему.</span>
-                        </p>
+                        <div class="animated-text">
+                            <span style="--delay:1">Комплексная</span> <span style="--delay:2">защита</span> <span style="--delay:3">от</span> 
+                            <span style="--delay:4">вирусов,</span> <span style="--delay:5">атак</span> <span style="--delay:6">и</span> 
+                            <span style="--delay:7">программ-вымогателей.</span> <span style="--delay:8">Облачная</span> 
+                            <span style="--delay:9">безопасность</span> <span style="--delay:10">без</span> 
+                            <span style="--delay:11">нагрузки</span> <span style="--delay:12">на</span> 
+                            <span style="--delay:13">систему.</span>
+                        </div>                       
                     </div>
                 </div>                
             </div> 
