--- a/src/html/blocks/bonus.html
+++ b/src/html/blocks/bonus.html
@@ -2,6 +2,13 @@
     <div class="container">
         <div class="bonus__wrapper">
             <h3 class="bonus__title title-2">Бонусы от N service:</h3>
+            <p>3. Бонусы для клиентов:
+                При покупке антивируса через N SERVICE, наши клиенты получают ряд привлекательных преимуществ:
+                •	Бесплатную установку программного обеспечения;
+                •	Скидки на последующие обновления и услуги, а также специальные условия для постоянных клиентов;
+                •	Бесплатную консультацию от наших экспертов по вопросам обеспечения информационной безопасности, что помогает выбрать оптимальное решение для вашего бизнеса.
+                Таким образом, выбирая N SERVICE, вы получаете не только высококачественный антивирус, но и всестороннюю поддержку, основанную на богатом опыте и высоком профессионализме наших специалистов. Это комплексное решение, которое поможет защитить ваш бизнес от современных киберугроз.
+                </p>
             <ul class="bonus__list">
                 <li class="bonus__list-item">
                     <svg class="icon--gift1">
