--- a/src/html/blocks/howtobuy.html
+++ b/src/html/blocks/howtobuy.html
@@ -2,12 +2,13 @@
     <div class="container">
         <h2 class="title-2">Как купить?</h2>
         <ul class="howtobuy__list">
-            <li class="howtobuy__list-item">1️⃣ Оставляете заявку: заполняете форму или делаете звонок.</li>
-            <li class="howtobuy__list-item">2️⃣ N Service подбирает для вас оптимальный тариф.</li>
-            <li class="howtobuy__list-item">3️⃣ Мы бесплатно устанавливаем и настраиваем выбранное вами ПО.</li>
+            <li class="howtobuy__list-item">Шаг 1. Оставляете заявку: через форму или мессенджер.</li>
+            <li class="howtobuy__list-item">Шаг 2. N Service подбирает для вас оптимальный тариф.</li>
+            <li class="howtobuy__list-item">Шаг 3. N Service <span class="colored">бесплатно</span> устанавливает и настраивает выбранное вами ПО.</li>
         </ul>
 
         <div class="howtobuy__licenses">
+            <p class="subtitle">Oзнакомьтесь с тарифами Trend Micro Worry-Free</p>
             @@include('templates/table.html')           
         </div>
 
