--- a/src/html/blocks/why.html
+++ b/src/html/blocks/why.html
@@ -7,14 +7,29 @@
             <p class="subtitle why__subtitle">N Service сотрудничает с Trend Micro миллион лет и предоставяет услуги этой компании в полном объеме, с гарантией персонального подхода к каждому клиенту </p>
             <div class="why__list-wrapper">
                 <div class="why__list-title">
-                    <p class="subtitle">Наши особенности</p>
+                    <p class="subtitle">Наши особенности:</p>
                 </div>
                     <ul class="why__list">
-                        <li class="list-item">Настройка антивируса под ваш бизнес, с учетом его особенностей</li>
+                        <li class="list-item">Настройка антивируса под ваш бизнес, с учетом его специфики.</li>
                         <li class="list-item">Комплексная защита "под ключ" - полный спектр безопасности ваших данных. </li>
                         <li class="list-item">Аудит безопасности - выявляем "слабые места" вашей системы. </li>
                         <li class="list-item">Постоянная техническая поддержка.</li>
                     </ul>          
+                    <p>
+                        1. Дополнительные услуги:
+Мы предлагаем не просто продукт, а комплексное решение для защиты вашего бизнеса. Помимо самого антивируса, наши клиенты получают:
+•	Настройку антивирусного ПО под индивидуальные потребности, что позволяет максимально использовать возможности защиты;
+•	Постоянную техническую поддержку, которая оперативно решает любые вопросы и помогает в оптимизации безопасности;
+•	Аудит безопасности, позволяющий выявить и устранить потенциальные уязвимости в вашей IT-инфраструктуре.
+2. Опыт и экспертиза в IT и кибербезопасности:
+N SERVICE имеет многолетний опыт работы в сфере информационных технологий и кибербезопасности. Мы можем предоставить конкретные кейсы и отзывы от ведущих компаний, что подтверждает наш высокий уровень профессионализма и надежность.
+
+
+                    </p>
+                    <div class="logo">logo 1</div>
+                    <div class="logo">logo 2</div>
+                    <div class="logo">logo 3</div>
+                    <div class="logo">logo 4</div>
             </div>
         </div>
     </div>
