--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,7 @@
 		@@include('blocks/why.html')
 		@@include('blocks/bonus.html')
 		@@include('blocks/partners.html')
-		@@include('blocks/feedback.html')
+		@@include('blocks/feedbacks.html')
 		@@include('blocks/howtobuy.html')
 		@@include('blocks/cta.html')
 		
