--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="benefits__icon-text">
                     <div class="benefits__item-title">
-                        <h3 data-key="card3-title" class="title-4">Удаленное администрирование </h3>
+                        <h3 data-key="card3-title" class="title-4">Удаленное управление</h3>
                     </div>
                     <p data-key="card3-text" class="benefits__item-desc">Удобный контроль всех устройств</p>
                 </div>
@@ -51,7 +51,7 @@
                     <div class="benefits__item-title">
                         <h3 data-key="card4-title" class="title-4">Комплексная защита </h3>
                     </div>
-                    <p data-key="card4-text" class="benefits__item-desc">Одновременная защита от вирусов, фишинга, атак и других неприятностей</p>
+                    <p data-key="card4-text" class="benefits__item-desc">Защита от вирусов, фишинга, хакерских атак, вредоносного ПО</p>
                 </div>
             </li>
             <li class="benefits__item">
