--- a/src/html/blocks/cta.html
+++ b/src/html/blocks/cta.html
@@ -6,13 +6,25 @@
                 <div class="cta__socials">
                     <a href="#" class="cta__socials-item">
                         <svg class="icon icon--whatsapp">
-                            <use href="./img/svgsprite/stack/svg/sprite.stack.svg#whatsapp"><span>Whatsapp</span></use>
+                            <use href="./img/svgsprite/stack/svg/sprite.stack.svg#whatsapp"><span class="icon-text">Whatsapp</span></use>
                         </svg>
                     </a>
                     <a href="#" class="cta__socials-item">
                         <svg class="icon icon--telegram">
-                            <use href="./img/svgsprite/stack/svg/sprite.stack.svg#telegram"><span>Telegram</span></use>
+                            <use href="./img/svgsprite/stack/svg/sprite.stack.svg#telegram"><span class="icon-text">Telegram</span></use>
                         </svg>
+                    </a>
+                </div>
+                <div class="cta__contacts">
+                    <a href="mailTo:service@nservice.lv">
+                        <svg class="icon icon--email">
+                            <use href="./img/svgsprite/sprite.symbol.svg#email"><span class="cta__email">service@nservice.lv</span></use>
+                        </svg>                        
+                    </a>
+                    <a href="tel:+37129503980">
+                        <svg class="icon icon--phone">
+                            <use href="./img/svgsprite/sprite.symbol.svg#phone"><span class="cta__phone">+371 29 503 980</span></use>
+                        </svg>                        
                     </a>
                 </div>
                 <img src="./../../img/nservice-img/business2.png" alt="">                
